[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tm2d-utils"
version = "0.2.0"
authors = [
  { name="Shahar Sandhaus", email="shahar.sandhaus@berkeley.edu" },
]
description = "Utilities for the tm2d library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "setuptools>=59.0",
    "numpy",
    "tm2d==0.3.0",
    "healpy",
    "tqdm",
    "pandas",
    "matplotlib",
    "cmcrameri",
    "mrcfile",
    "starfile",
    "Bio"
]

[project.urls]
Homepage = "https://github.com/matterwaves/tm2d-utils"
Issues = "https://github.com/matterwaves/tm2d-utils/issues"

[tool.setuptools]
packages = [
    "tm2d_utils",
]
